fix: configure community group additions
