# server/dto/community.go
@@ -30,12 +30,6 @@ type CommunitySetJoinApprovalModeRequest struct {
 	Mode         bool   `json:"mode"`
 }
 
-type CommunitySetMemberAddModeRequest struct {
-	InstanceID   string `param:"instance" validate:"required" swaggerignore:"true"`
-	CommunityJid string `json:"communityJid" validate:"required"`
-	Mode         string `json:"mode" validate:"required,oneof=admin_add all_member_add"`
-}
-
 type CommunityUpdateRequestParticipantsRequest struct {
 	InstanceID   string   `param:"instance" validate:"required" swaggerignore:"true"`
 	CommunityJid string   `json:"communityJid" validate:"required"`
