# server/routes/community.go
@@ -19,7 +19,6 @@ func Community(group *echo.Group) {
 	group.GET("/subGroups", controller.SubGroups)
 	group.GET("/linkedGroupsParticipants", controller.LinkedGroupsParticipants)
 	group.POST("/setJoinApprovalMode", controller.SetJoinApprovalMode)
-	group.POST("/setMemberAddMode", controller.SetMemberAddMode)
 	group.GET("/requestParticipants", controller.RequestParticipants)
 	group.POST("/requestParticipants/update", controller.UpdateRequestParticipants)
 }
